hw05/test/zm-main-return-type-error.fmj
public int main() {
  int[] a; 
  a=new int[8];
  return a; // error 
}
